tests code cleaning